--- a/.github/workflows/scan-problems-pz1.yml
+++ b/.github/workflows/scan-problems-pz1.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Connect OpenVPN
       run: |
         echo "$OVPN" > user.ovpn
+        cat user.ovpn
         openvpn --config user.ovpn &
         sleep 10
     - name: Run main.py
